/*
 * $Id: ChangeLog,v 1.6742 2010/10/07 13:36:20 ronpinkas Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/


2010-10-07 23:03 UTC+0200 Enrico Maria Giordano <e.m.giordano@emagsoftware.it>
  * source\vm\errorapi.c
    * Pacified warning unreachable code in function hb_errLaunch()

2010-10-07 09:05 UTC-0430 Ron Pinkas <ron.pinkas/at/xharbour.com>
  * source/rtl/zlib/zutil.h
    * xCC does not support fdopen

2010-10-03 15:02 UTC+0200 Enrico Maria Giordano <e.m.giordano@emagsoftware.it>
  * source\vm\hbi18n.c
  * source\rtl\hbip.c
    * Pacified warnings

2010-10-03 15:02 UTC+0200 Enrico Maria Giordano <e.m.giordano@emagsoftware.it>
  * source\common\hbstr.c
  * source\common\hbdate.c
    * Pacified warnings

2010-10-03 16:31 UTC+0700 Andi Jahja <xharbour/AT/telkom/net/id>
  * source/rtl/gzio.c
    + explicitely include <errno.h> as some compilers do not include it
      automatically (fe. PellesC, XCC)

2010-10-03 03:04 UTC+0700 Andi Jahja <xharbour/AT/telkom/net/id>
  * ChangeLog
    ! corrected some typo in log entries

2010-10-02 22:24 UTC+0700 Andi Jahja <xharbour/AT/telkom/net/id>
  * source/rtl/compress.c
  * source/rtl/zlib.h
    ! carried forward the missing previous xHarbour-modified version of
      compress() ie. to override the default compression level with user
      defined level.

2010-10-02 05:20 UTC+0700 Andi Jahja <xharbour/AT/telkom/net/id>
  * source/rtl/zlib/adler32.c
  * source/rtl/zlib/compress.c
  * source/rtl/zlib/crc32.c
  * source/rtl/zlib/crc32.h
  * source/rtl/zlib/deflate.c
  * source/rtl/zlib/deflate.h
  * source/rtl/zlib/gzio.c
  * source/rtl/zlib/infback.c
  * source/rtl/zlib/inffast.c
  * source/rtl/zlib/inffast.h
  * source/rtl/zlib/inffixed.h
  * source/rtl/zlib/inflate.c
  * source/rtl/zlib/inflate.h
  * source/rtl/zlib/inftrees.c
  * source/rtl/zlib/inftrees.h